Solved whitespace and setAttribute(aos) problem and added change lpg

--- a/web dev/customcss.css
+++ b/web dev/customcss.css
@@ -8,6 +8,8 @@
   font-smooth: antialiased;
   text-rendering: optimizeLegibility
 }
+
+html, body { overflow-x: hidden; }
 #members {
     padding: 0;
     margin: 0 auto 25px auto;
